@@ -1,3 +1,9 @@
+2010-08-03  Sergio Martin <sergio.martin@artica.es>
+
+	* pandoradb.sql
+	extras/pandoradb_migrate_v3.1_to_v3.2.sql: Added a id_policy_module
+	field into agente_modulo table for future use
+
 2010-08-03  Junichi Satoh  <junichi@rworks.jp>
 
 	* godmode/alerts/alert_list.list.php: Fixed a problem alert filtering
